# vasudev.xyz

./: .coderabbit.yaml  .envrc  .gitignore  .vale.ini  CLAUDE.md  CNAME  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  hugo.toml  hugo_stats.json  index.html
.github/: allowed-tags.txt
.github/workflows/: adr-lint.yml  check-links.yml  deploy-chat-api.yml  deploy.yml  generate-og-images.yml  prose-lint.yml  translate-guides.yml  translate.yml
archetypes/: default.md
assets/css/: main.css
assets/js/: agent.js  blog-search.js  code-copy.js  lang-toggle.js
chat/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
chat/src/: ChatWidget.tsx  index.tsx
cmd/chat-api/: package-lock.json  package.json  wrangler.toml
cmd/check-links/: go.mod  main.go  main_test.go
cmd/generate-og-images/: go.mod  main.go  main_test.go
cmd/graphify-update/: .gitignore  go.mod  main.go
cmd/sync-graph/: go.mod  main.go
cmd/translate/: go.mod  main.go  main_test.go
content/: _index.md  about.de.md  about.es.md  about.md  privacy.md
data/: allowed-tags.txt  principles.yaml  work.yaml
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
i18n/: de.toml  de.yaml  en.toml  en.yaml  es.toml  es.yaml
layouts/: 404.html  index.html
scripts/: sync-graph.py  test_adr_lint.sh
tests/: adr-lint.sh  adr-lint_test.sh  agent-stream-parser.test.cjs
tools/verify-cpp-guide/: CMakeLists.txt  README.md  expected_cpp23.cpp  negative.cpp  verify.cpp
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+222 files in other folders)
